Removed AJAX stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 before6.esproj/user.administrator.espressostorage
 
 before6.esproj/Project.espressostorage
+
+yourbucketlist.esproj/user.administrator.espressostorage
