--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 Options +FollowSymLinks  
 RewriteEngine On  
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
   
 RewriteRule ^([a-zA-Z0-9]+)$ index.php?page=$1
 RewriteRule ^([a-zA-Z0-9]+)/$ index.php?page=$1
