--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ before6.esproj/user.administrator.espressostorage
 before6.esproj/Project.espressostorage
 
 yourbucketlist.esproj/user.administrator.espressostorage
+
+.htaccess
